# falcon_bt

./: CMakeLists.txt  README.md
falcon_bt/: CMakeLists.txt  backtest_handler.h  base_strategy.h  main.cpp  strategy_a.h
include/: data_handler.h  data_reader.cpp  data_reader.h  event.h  order.cpp  order.h
src/: CMakeLists.txt  backtest_handler.h  base_strategy.h  data_handler.h  data_reader.cpp  data_reader.h  event.h  main.cpp  order.cpp  order.h  sample.txt  strategy_a.h  util.h
